[workspace]
resolver = '2'
members = [
    "contracts/hub",
    "contracts/hub-tf",
    "contracts/token",
    "packages/steak",
]

edition       = "2021"

[workspace.dependencies]
# packages
steak                = { path = "./packages/steak" }
# contracts
hub               = { path = "./contracts/hub" }
hub-tf          = { path = "./contracts/hub-tf" }
token          = { path = "./contracts/token" }


[profile.release.package.steak]
opt-level = 3
debug = false
debug-assertions = false
codegen-units = 1
incremental = false

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
