[package]
name = "steak-token"


version       = { workspace = true }
authors       = { workspace = true }
license       = { workspace = true }
edition       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }
keywords      = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
library    = []

[dependencies]
cosmwasm-std = { version = "1.5.4" }
cosmwasm-schema = { version = "1.5.4" }
cw20 = "0.13"
cw20-base = { version = "0.16", features = ["library"] }
